; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/proto/extr_proto_busdma.c_proto_busdma_md_unload.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/proto/extr_proto_busdma.c_proto_busdma_md_unload.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.proto_busdma = type { i32 }
%struct.proto_md = type { i64, i32, i32 }

@ENXIO = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.proto_busdma*, %struct.proto_md*)* @proto_busdma_md_unload to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @proto_busdma_md_unload(%struct.proto_busdma* %0, %struct.proto_md* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.proto_busdma*, align 8
  %5 = alloca %struct.proto_md*, align 8
  store %struct.proto_busdma* %0, %struct.proto_busdma** %4, align 8
  store %struct.proto_md* %1, %struct.proto_md** %5, align 8
  %6 = load %struct.proto_md*, %struct.proto_md** %5, align 8
  %7 = getelementptr inbounds %struct.proto_md, %struct.proto_md* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %12, label %10

10:                                               ; preds = %2
  %11 = load i32, i32* @ENXIO, align 4
  store i32 %11, i32* %3, align 4
  br label %22

12:                                               ; preds = %2
  %13 = load %struct.proto_md*, %struct.proto_md** %5, align 8
  %14 = getelementptr inbounds %struct.proto_md, %struct.proto_md* %13, i32 0, i32 2
  %15 = load i32, i32* %14, align 4
  %16 = load %struct.proto_md*, %struct.proto_md** %5, align 8
  %17 = getelementptr inbounds %struct.proto_md, %struct.proto_md* %16, i32 0, i32 1
  %18 = load i32, i32* %17, align 8
  %19 = call i32 @bus_dmamap_unload(i32 %15, i32 %18)
  %20 = load %struct.proto_md*, %struct.proto_md** %5, align 8
  %21 = getelementptr inbounds %struct.proto_md, %struct.proto_md* %20, i32 0, i32 0
  store i64 0, i64* %21, align 8
  store i32 0, i32* %3, align 4
  br label %22

22:                                               ; preds = %12, %10
  %23 = load i32, i32* %3, align 4
  ret i32 %23
}

declare dso_local i32 @bus_dmamap_unload(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
